fix: update version number

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "pansong291.floatpic"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 20220926
+        versionName "1.0-alpha.1"
     }
     buildTypes {
         release {
